# medocr

./: Procfile  detected.json  en_dict.txt  main.py  medOCR.py  model_dl.py  pyproject.toml  requirements.txt
