[tool.poetry]
name = "medocr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
paddleocr = "2.6.1.3"
paddlepaddle = "2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"